[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Main Characters/Mask Dude/Fall (32x32).png" type="Texture" id=1]
[ext_resource path="res://hud/CharacterSelect.gd" type="Script" id=2]
[ext_resource path="res://assets/Main Characters/Pink Man/Fall (32x32).png" type="Texture" id=3]
[ext_resource path="res://assets/Main Characters/Ninja Frog/Fall (32x32).png" type="Texture" id=4]
[ext_resource path="res://assets/Main Characters/Virtual Guy/Fall (32x32).png" type="Texture" id=5]

[node name="CharacterSelect" type="PopupPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -96.0
margin_right = 110.0
margin_bottom = 96.0
rect_min_size = Vector2( 212, 175 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.0
margin_top = -92.0
margin_right = 106.0
margin_bottom = 92.0
rect_min_size = Vector2( 0, 175 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 212.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
text = "Select A Character"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 212.0
margin_bottom = 184.0
rect_min_size = Vector2( 200, 150 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="NinePatchRect" parent="VBoxContainer/HBoxContainer"]
margin_right = 50.0
margin_bottom = 150.0
rect_min_size = Vector2( 50, 0 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/CenterContainer"]
margin_right = 50.0
margin_bottom = 100.0
text = "Masked Dude"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaskedDude" type="Button" parent="VBoxContainer/HBoxContainer/CenterContainer"]
margin_left = 10.0
margin_top = 87.0
margin_right = 40.0
margin_bottom = 117.0
rect_min_size = Vector2( 30, 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="VBoxContainer/HBoxContainer/CenterContainer/MaskedDude"]
position = Vector2( 13.5741, 13.1727 )
texture = ExtResource( 1 )

[node name="CenterContainer2" type="NinePatchRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 54.0
margin_right = 104.0
margin_bottom = 150.0
rect_min_size = Vector2( 50, 0 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/CenterContainer2"]
margin_right = 50.0
margin_bottom = 100.0
text = "Ninja Frog"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinjaFrog" type="Button" parent="VBoxContainer/HBoxContainer/CenterContainer2"]
margin_left = 10.0
margin_top = 87.0
margin_right = 40.0
margin_bottom = 117.0
rect_min_size = Vector2( 30, 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="VBoxContainer/HBoxContainer/CenterContainer2/NinjaFrog"]
position = Vector2( 14.7646, 11.9822 )
texture = ExtResource( 4 )

[node name="CenterContainer3" type="NinePatchRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 108.0
margin_right = 158.0
margin_bottom = 150.0
rect_min_size = Vector2( 50, 0 )

[node name="PinkMan" type="Button" parent="VBoxContainer/HBoxContainer/CenterContainer3"]
margin_left = 10.0
margin_top = 87.0
margin_right = 40.0
margin_bottom = 117.0
rect_min_size = Vector2( 30, 30 )

[node name="Sprite" type="Sprite" parent="VBoxContainer/HBoxContainer/CenterContainer3/PinkMan"]
position = Vector2( 14.7646, 11.9822 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/CenterContainer3"]
margin_right = 50.0
margin_bottom = 100.0
text = "Pink Man"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer4" type="NinePatchRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 162.0
margin_right = 212.0
margin_bottom = 150.0
rect_min_size = Vector2( 50, 0 )

[node name="VirtualGuy" type="Button" parent="VBoxContainer/HBoxContainer/CenterContainer4"]
margin_left = 10.0
margin_top = 87.0
margin_right = 40.0
margin_bottom = 117.0
rect_min_size = Vector2( 30, 30 )

[node name="Sprite" type="Sprite" parent="VBoxContainer/HBoxContainer/CenterContainer4/VirtualGuy"]
position = Vector2( 14.7646, 11.9822 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/CenterContainer4"]
margin_right = 50.0
margin_bottom = 100.0
text = "Virtual Guy"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/HBoxContainer/CenterContainer/MaskedDude" to="." method="_on_MaskedDude_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CenterContainer2/NinjaFrog" to="." method="_on_NinjaFrog_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CenterContainer3/PinkMan" to="." method="_on_PinkMan_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CenterContainer4/VirtualGuy" to="." method="_on_VirtualGuy_pressed"]
